force-app/main/default/objects/Test_Object__c/fields/Agree__c.field-meta.xml
<CustomField>
    <fullName>Agree__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Agree</label>
    <type>Checkbox</type>
</CustomField>