force-app/main/default/objects/Test_Object__c/fields/Privace_Policy__c.field-meta.xml
<CustomField>
    <fullName>Privace_Policy__c</fullName>
    <defaultValue>&quot;I authorise B. Braun Avitum to hold and use my Personal Data in accordance with the General Data Protection Regulations ((EU) 2016/679) (and any local UK iterations or enactments), including information to be sent by secure means to a third party where necessary for the purpose of supplying medicines to me and advising on their use.&quot;</defaultValue>
    <label>Privace Policy</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>