force-app/main/default/objects/Test_Object__c/recordTypes/Second_test_RT.recordType-meta.xml
<RecordType>
    <fullName>Second_test_RT</fullName>
    <active>true</active>
    <label>Second test RT</label>
</RecordType>