force-app/main/default/objects/Test_Object__c/recordTypes/Test_Object_RT.recordType-meta.xml
<RecordType>
    <fullName>Test_Object_RT</fullName>
    <active>true</active>
    <label>Test Object RT</label>
</RecordType>